# masterarbeit

./: .env.example  .gitignore  README.md  pyproject.toml
Models/: chat_gpt.py  gemini.py
context_aware_dialogue_caching/: dialogue_cache.py
context_discoverer/: build_section_whitelist.py  context_discoverer.py  templates.py
conversation_evaluator/: multi_turn_evaluation.py  requirements.txt  single_turn_evaluation.py
conversation_generator/: conversation_generation.py  templates.py
conversation_generator/data/: conversation_data_gemini-3.1-flash-lite_turns_4_conversation_<built-in function max>.jsonl  conversation_data_gemini-3.1-flash-lite_turns_5_conversation_<built-in function max>.jsonl
conversation_generator/utils/: chroma_connector.py  parser.py
conversation_validator/: conversation_validator.py  templatesValidation.py
conversation_validator/utils/: parser_validation.py
data/: allowed_article_ids.json  conversation_data_gemini-2.5-flash_turns_4_conversation_3.jsonl  conversation_data_gemini-3.1-flash-lite_turns_5_conversation_<built-in function max>.jsonl  conversifation_data_gemini-3.1-flash-lite_turns_5_conversation_<built-in function max>.jsonl
data_preprocessing/: .dockerignore  Dockerfile  README.md  docker-compose.yml
data_preprocessing/notebooks/: add_embeddings_to_guardian_json.ipynb  create_Veval.ipynb
data_preprocessing/services/guardian_fetcher/: app.py  requirements.txt
dialogue_cache/: dialogue_cache.py
docs/: requirements.txt
human_validation/: dialog_viewer  viewer.html
phase_1_validation/: target_advanced.ipynb  target_baseline.ipynb  tau_analysis.py
phase_1_validation/caching_efficiency/: cache_efficiency_analysis.ipynb  evaluation_costs_raw.csv  evaluation_dataset_full.csv
phase_1_validation/caching_efficiency/conversations/: 16fdcc9d-3c65-46d9-8ea6-5d52ba6a444b.jsonl  392c9cc7-f4c1-4529-94fc-2a1f59ced3cd.jsonl  45ea68d7-6e88-4ba9-a8d3-cb2366b1651a.jsonl  (+2 more)
rag_to_be_tested/: main.py  requirements.txt
rag_to_be_tested/qa_chains/: qa_chain.py  qa_chain_advanced.py  qa_chain_baseline.py
streamlit_viewer/: app.py  requirements.txt
(+12 files in other folders)
