[project]
name = "masterarbeit"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Hillebrand",email = "daniel.hillebrand@uibk.ac.at"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "openai (>=2.24.0,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "google-genai (>=1.73.1,<2.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "weasyprint (>=68.1,<69.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "langchain (>=1.3.0,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-core (>=1.4.0,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
