[project]
name = "masterarbeit"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Hillebrand", email = "daniel.hillebrand@uibk.ac.at"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "chromadb (>=1.5.9,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "google-genai (>=2.10.0,<3.0.0)",
    "langchain-community (>=0.2.0,<0.3.0)",
    "langchain-core (>=0.2.38,<0.3.0)",
    "langchain-google-genai (>=1.0.10,<2.0.0)",
    "langchain-openai (>=0.1.20,<0.2.0)",
    "openai (>=1.40.0,<2.0.0)",
    "pandas (>=3.0.4,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"